Time: 31 ms (34.59%), Space: 100.6 MB (13.47%) - LeetHub